docker compose deps for web service

--- a/notebooks/Untitled1.ipynb
+++ b/notebooks/Untitled1.ipynb
@@ -772,8 +772,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f8158dbf-f351-45ed-be6f-38e2c94f72ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VERIFYING DATA STORAGE\n",
+      "============================================================\n",
+      "Paper nodes: 2\n",
+      "  - Paper: 001dabf1e77e484ead7fdc69a2319ed7 - WatsonCrick1953.pdf\n",
+      "  - Paper: fac3efb7b0e8436fb658c2b8b63ae77c - WatsonCrick1953.pdf\n",
+      "Edges: 91\n",
+      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/d2e422dffca344689c470ed0a853de1b (contains)\n",
+      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/6477e3ce842640489ebba045503da775 (contains)\n",
+      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/eb2e4380a7a84bfbb518eacfc24dbe66 (contains)\n",
+      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/a84edf5022a24a41997416e755fd6743 (contains)\n",
+      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/d2345d27b19b4becbf8352d84563e09e (contains)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify nodes and edges are actually stored\n",
+    "async def verify_data_storage():\n",
+    "    if graph_db.db is None:\n",
+    "        await graph_db.connect()\n",
+    "    \n",
+    "    print(\"VERIFYING DATA STORAGE\")\n",
+    "    print(\"=\" * 60)\n",
+    "    \n",
+    "    # Check paper nodes\n",
+    "    if graph_db.db.has_collection('nodes_paper'):\n",
+    "        papers = graph_db.db.collection('nodes_paper')\n",
+    "        paper_count = papers.count()\n",
+    "        print(f\"Paper nodes: {paper_count}\")\n",
+    "        \n",
+    "        # Show first few papers\n",
+    "        cursor = papers.all(limit=3)\n",
+    "        for paper in cursor:\n",
+    "            print(f\"  - Paper: {paper.get('_key', 'N/A')} - {paper.get('title', 'No title')}\")\n",
+    "    \n",
+    "    # Check entity nodes\n",
+    "    if graph_db.db.has_collection('nodes_entities'):\n",
+    "        entities = graph_db.db.collection('nodes_entities')\n",
+    "        entity_count = entities.count()\n",
+    "        print(f\"Entity nodes: {entity_count}\")\n",
+    "        \n",
+    "        # Show first few entities\n",
+    "        cursor = entities.all(limit=5)\n",
+    "        for entity in cursor:\n",
+    "            print(f\"  - Entity: {entity.get('_key', 'N/A')} - {entity.get('label', 'No label')} ({entity.get('type', 'No type')})\")\n",
+    "    \n",
+    "    # Check edges\n",
+    "    if graph_db.db.has_collection('edges_contains'):\n",
+    "        edges = graph_db.db.collection('edges_contains')\n",
+    "        edge_count = edges.count()\n",
+    "        print(f\"Edges: {edge_count}\")\n",
+    "        \n",
+    "        # Show first few edges\n",
+    "        cursor = edges.all(limit=5)\n",
+    "        for edge in cursor:\n",
+    "            print(f\"  - Edge: {edge.get('_from', 'N/A')} -> {edge.get('_to', 'N/A')} ({edge.get('label', 'No label')})\")\n",
+    "\n",
+    "await verify_data_storage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "250a6061-3184-45e3-823f-85cc8c6d870e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "papers = graph_db.db.collection('nodes_paper')\n",
+    "papers.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37301ff0-a064-4396-8f1f-5ac24bcd24c1",
    "metadata": {},
    "outputs": [],
    "source": []
