fixed caching & tested with mock llm

--- a/notebooks/graph_db_debug.ipynb
+++ b/notebooks/graph_db_debug.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0b61e788-a2c9-4f5a-be73-0ee1b0ba218f",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "f8158dbf-f351-45ed-be6f-38e2c94f72ac",
    "metadata": {},
    "outputs": [
@@ -782,15 +782,8 @@
      "text": [
       "VERIFYING DATA STORAGE\n",
       "============================================================\n",
-      "Paper nodes: 2\n",
-      "  - Paper: 001dabf1e77e484ead7fdc69a2319ed7 - WatsonCrick1953.pdf\n",
-      "  - Paper: fac3efb7b0e8436fb658c2b8b63ae77c - WatsonCrick1953.pdf\n",
-      "Edges: 91\n",
-      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/d2e422dffca344689c470ed0a853de1b (contains)\n",
-      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/6477e3ce842640489ebba045503da775 (contains)\n",
-      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/eb2e4380a7a84bfbb518eacfc24dbe66 (contains)\n",
-      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/a84edf5022a24a41997416e755fd6743 (contains)\n",
-      "  - Edge: papers/fac3efb7b0e8436fb658c2b8b63ae77c -> entities/d2345d27b19b4becbf8352d84563e09e (contains)\n"
+      "Paper nodes: 0\n",
+      "Edges: 0\n"
      ]
     }
    ],
@@ -841,17 +834,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "250a6061-3184-45e3-823f-85cc8c6d870e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
