fixing kg graph generation [skip actions]

--- a/notebooks/kg-gen_tests.ipynb
+++ b/notebooks/kg-gen_tests.ipynb
@@ -891,23 +891,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "0d07c32b-422d-4453-947f-38c2682e02c8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'True'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getenv('USE_OLLAMA') "
+    "os.getenv('OLLAMA_MODEL') "
    ]
   },
   {
@@ -926,7 +915,9 @@
    "id": "3af23c33-1ef7-4f26-8b35-e38b9232e96a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phi3:mini"
+   ]
   }
  ],
  "metadata": {
