testing local vector db CRUD ops [skip actions]

--- a/notebooks/firestore_debug.ipynb
+++ b/notebooks/firestore_debug.ipynb
@@ -24,19 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a7dc529e-3f68-4cd4-8abe-bc6952ef6bad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_users\n",
-      "test_users2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from google.cloud import firestore\n",
     "\n",
@@ -46,6 +37,26 @@
     "for col in db.collections():\n",
     "    print(col.id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ed85232-cf9b-48e7-9d1b-e1176f1f9dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'generator' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdb\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcollections\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: object of type 'generator' has no len()"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "6bf5f0f3-7481-4550-afe4-f98b31441ccc",
    "metadata": {},
    "outputs": [
@@ -249,7 +260,7 @@
      "text": [
       "\n",
       "--- Collections ---\n",
-      "Found Collections: ['test_users']\n"
+      "Found Collections: []\n"
      ]
     }
    ],
@@ -536,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
